ExperimentalAllTagsSelect limits display of created 'tags' (options) to 50 characters preventing layout issues

--- a/frontend/src/components/ExperimentalAllTagsSelect/ExperimentalAllTagsSelect.module.css
+++ b/frontend/src/components/ExperimentalAllTagsSelect/ExperimentalAllTagsSelect.module.css
@@ -5,6 +5,9 @@
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
+  /* Prevent container overflowing horizontally 
+  due to lengthy selected options */
+  max-width: 40rem;
 }
 
 @media (max-width: 750px) {
